src- Version 4.19/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Advance_Request_Status__c</fullName>
        <description>Automatically the status is populated</description>
        <inlineHelpText>The status will auto populate as Requested or Paid in the Advance Request Status</inlineHelpText>
        <label>Advance Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advance_Requested_Amount__c</fullName>
        <description>Amount Proposed by the User</description>
        <inlineHelpText>This Amount will auto populate in the Request Advance Payment</inlineHelpText>
        <label>Advance Amount Requested(Current)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BrainTree_Customer_ID__c</fullName>
        <description>On first creation of token Customer ID will populate</description>
        <inlineHelpText>This field will auto populate when ever the token is generated for the first time</inlineHelpText>
        <label>BrainTree Customer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Class__c</fullName>
        <description>Categorize your customers so you can configure different discount levels for them.</description>
        <inlineHelpText>Categorize your customers so you can configure different discount levels for them.</inlineHelpText>
        <label>Customer Class</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Profile_ID__c</fullName>
        <description>Payment Profile id is generated for Authorize.net CIM</description>
        <inlineHelpText>This filed will auto populate when Payment Profile is created for Authorize.net CIM</inlineHelpText>
        <label>Customer Profile ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default payment Gateway proposed by the User</description>
        <inlineHelpText>This field will pick  the Default Payment Gateway at Account level</inlineHelpText>
        <label>Default Payment Gateway</label>
        <referenceTo>Gateway__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Type__c</fullName>
        <description>It provides either Print/Email/Email &amp; Print for invoice</description>
        <inlineHelpText>This field will manually populate when the customer asks the invoice either Print/Email</inlineHelpText>
        <label>Invoice Delivery Type</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email &amp; Print</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default Payment Method proposed by the User</description>
        <inlineHelpText>This field will populate when ever the Payment Method is created and set as default</inlineHelpText>
        <label>Default Payment Method</label>
        <referenceTo>Payment_Method__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>Terms proposed by the user</description>
        <inlineHelpText>This field determines the required length of time that must elapse from the Invoice Date, before the Invoice can be billed automatically</inlineHelpText>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due On Receipt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Billing_Day__c</fullName>
        <description>The preferred Billing Day for this Order.</description>
        <inlineHelpText>Some calendar months don&apos;t have the 30th or the 31st day. If you select 31 as the day for invoicing and the current month has only 30 days,30 will be used instead.</inlineHelpText>
        <label>Preferred Billing Day of the month</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Todays_MRR_With_TAX__c</fullName>
        <description>This is Monthly Recurring Revenue calculated with Tax on a schedule. 
This considers the recurring charges that are active today based on the 
Service Activation Date and Service End Date 
at the line level. Plz refer the help doc on how to schedule this.</description>
        <inlineHelpText>This is Monthly Recurring Revenue calculated with Tax on a schedule. 
This considers the recurring charges that are active today based on the 
Service Activation Date and Service End Date 
at the line level. Plz refer the help doc on how to schedule</inlineHelpText>
        <label>Today&apos;s MRR With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Todays_MRR__c</fullName>
        <description>&quot;This is the Monthly Recurring Revenue calculated on a schedule. 
This considers the recurring charges that are active today based on the 
Service Activation Date and Service End Date 
at the line level. Plz refer the help doc on how to schedule this.</description>
        <inlineHelpText>This is the Monthly Recurring Revenue calculated on a schedule. 
This considers the recurring charges that are active today based on the 
Service Activation Date and Service End Date 
at the line level. Plz refer the help doc on how to schedule this.</inlineHelpText>
        <label>Today&apos;s MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalInvoiceValue__c</fullName>
        <description>It will calculate the SUM of the Invoice&apos;s.</description>
        <inlineHelpText>SUM of the Invoice&apos;s on this Account</inlineHelpText>
        <label>Total Invoice Value</label>
        <summarizedField>Invoice__c.Total_Invoice_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Draft, Posted</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice__c.Invoice_State__c</field>
            <operation>equals</operation>
            <value>Regular,</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalOrderValue__c</fullName>
        <description>Sum of Orders on this Account</description>
        <inlineHelpText>Sum of Orders on this Account</inlineHelpText>
        <label>Total Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalQuoteValue__c</fullName>
        <description>Sum of Quotes on this Account</description>
        <inlineHelpText>Sum of Quotes on this Account</inlineHelpText>
        <label>Total Quote Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Unallocated_Payment__c</fullName>
        <description>Indicates the customer credit - all the unallocated payments against this customer.</description>
        <inlineHelpText>Indicates the customer credit - all the unallocated payments against this customer.</inlineHelpText>
        <label>Customer Credit</label>
        <summarizedField>Payment__c.Unallocated_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Initiated, Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VAT_No__c</fullName>
        <description>This field will manually populates when the customer is using VAT/Tax  numbers for their 
business/products</description>
        <inlineHelpText>This field will manually populates when the customer is using VAT/Tax numbers for their 
business/products</inlineHelpText>
        <label>Customer VAT / Tax No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>